--- a/app/views/posts/index.haml
+++ b/app/views/posts/index.haml
@@ -10,4 +10,7 @@
   - posts.each do |post|
     %li.post--short-size
       .post__title= link_to post.title, post_path(post)
+      .post__created_at= post.friendly_date
       .post__body= post.truncated_body
+      - if current_user.owner? post
+        .post__comment= link_to "delete post", post_path(post), :method => :delete
